--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,6 +20,12 @@ jobs:
       - run: npm install
       - run: npm run build
 
+  deploy:
+    needs: build
+    runs-on: ubunto-latest
+    environment: container
+
+    steps:
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
