config: action default region AWS

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,7 +22,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     environment: container
 
     steps:
