--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -31,6 +31,9 @@ jobs:
     environment: container
 
     steps:
+      - name: List top-level directory
+        run: ls -la
+
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
