config: action default region AWS

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - name: List top-level directory
-        run: ls -la
+        run: ls
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
