--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,9 +7,9 @@ on:
     paths:
       - "packages/container/**"
 
-defaults:
-  run:
-    working-directory: packages/container
+# defaults:
+#   run:
+#      working-directory: packages/container
 
 jobs:
   build:
