--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,10 +7,6 @@ on:
     paths:
       - "packages/container/**"
 
-# defaults:
-#   run:
-#      working-directory: packages/container
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,9 +17,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: packages/container
 
       - name: Build a project
         run: npm run build
+        working-directory: packages/container
 
   deploy:
     needs: build
@@ -33,9 +31,11 @@ jobs:
     steps:
       - name: List top-level directory
         run: ls
+        working-directory: packages/container
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
+        working-directory: packages/container
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
