--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,4 +1,47 @@
-name: deploy-container
+# name: deploy-container
+
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - "packages/container/**"
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Check out repository
+#         uses: actions/checkout@v2
+
+#       - name: Install dependencies
+#         run: npm install
+#         working-directory: packages/container
+
+#       - name: Build a project
+#         run: npm run build
+#         working-directory: packages/container
+
+#   deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     environment: container
+
+#     steps:
+#       - name: List top-level directory
+#         run: ls
+#         working-directory: packages/container
+
+#       - uses: shinyinc/action-aws-cli@v1.2
+#       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
+#         working-directory: packages/container
+#         env:
+#           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+#           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+#           AWS_DEFAULT_REGION: us-east-1
+
+#           name: deploy-container
 
 on:
   push:
@@ -15,6 +58,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
+      - name: List top-level directory
+        run: ls -la
+
+      - name: List packages directory
+        run: ls -la packages
+
+      - name: List container directory
+        run: ls -la packages/container
+
       - name: Install dependencies
         run: npm install
         working-directory: packages/container
@@ -29,12 +81,21 @@ jobs:
     environment: container
 
     steps:
-      - name: List top-level directory
-        run: ls
-        working-directory: packages/container
+      - name: Check out repository
+        uses: actions/checkout@v2
 
-      - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
+      - name: List top-level directory
+        run: ls -la
+
+      - name: List packages directory
+        run: ls -la packages
+
+      - name: List container directory
+        run: ls -la packages/container
+
+      - name: Sync to S3
+        run: |
+          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         working-directory: packages/container
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
