config: action default region AWS

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,47 +1,4 @@
-# name: deploy-container
-
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - "packages/container/**"
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Check out repository
-#         uses: actions/checkout@v2
-
-#       - name: Install dependencies
-#         run: npm install
-#         working-directory: packages/container
-
-#       - name: Build a project
-#         run: npm run build
-#         working-directory: packages/container
-
-#   deploy:
-#     needs: build
-#     runs-on: ubuntu-latest
-#     environment: container
-
-#     steps:
-#       - name: List top-level directory
-#         run: ls
-#         working-directory: packages/container
-
-#       - uses: shinyinc/action-aws-cli@v1.2
-#       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
-#         working-directory: packages/container
-#         env:
-#           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-#           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-#           AWS_DEFAULT_REGION: us-east-1
-
-#           name: deploy-container
+name: deploy-container
 
 on:
   push:
@@ -53,7 +10,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: container
 
     steps:
       - name: Check out repository
@@ -76,12 +32,15 @@ jobs:
         run: npm run build
         working-directory: packages/container
 
-      # deploy:
-      #   needs: build
-      #   runs-on: ubuntu-latest
+      - name: List build output
+        run: ls -la packages/container/dist
 
-      #   steps:
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: container
 
+    steps:
       - name: Check out repository
         uses: actions/checkout@v2
 
@@ -94,10 +53,12 @@ jobs:
       - name: List container directory
         run: ls -la packages/container
 
+      - name: List build output
+        run: ls -la packages/container/dist
+
       - name: Sync to S3
         run: |
-          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
-        working-directory: packages/container
+          aws s3 sync packages/container/dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
