--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,11 +1,11 @@
-name: deploy-container
+name: deploy-marketing
 
 on:
   push:
     branches:
       - main
     paths:
-      - "packages/container/**"
+      - "packages/marketing/**"
 
 jobs:
   build:
@@ -16,36 +16,25 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # - name: List top-level directory
-      #   run: ls -la
-
-      # - name: List packages directory
-      #   run: ls -la packages
-
-      # - name: List container directory
-      #   run: ls -la packages/container
-
       - name: Install dependencies
         run: npm install
-        working-directory: packages/container
+        working-directory: packages/marketing
 
       - name: Build a project
         run: npm run build
-        working-directory: packages/container
-
-      # - name: List build output
-      #   run: ls -la packages/container/dist
+        working-directory: packages/marketing
 
       - name: Sync to S3
         run: |
-          aws s3 sync packages/container/dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
+          aws s3 sync packges/marketing/dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/marketing/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
 
       - name: Create invalidation in cloundfront for index.html
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_ID }} --paths "/container/latest/index.html"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_ID }} --paths "/marketing/latest/index.html"
+
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
