--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Sync to S3
         run: |
-          aws s3 sync packges/marketing/dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/marketing/latest
+          aws s3 sync packages/marketing/dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/marketing/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
