--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -45,7 +45,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
 
       - name: Create invalidation in cloundfront for index.html
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_ID }} --paths "/container/latest/index.html"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_CONTAINER_ID }} --paths "/container/latest/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
