config: add PRODUCTION_DOMAIN secrets

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Build a project
         run: npm run build
         working-directory: packages/container
+        env:
+          PRODUCTION_DOMAIN: ${{secrets.PRODUCTION_DOMAIN}}
 
       # - name: List build output
       #   run: ls -la packages/container/dist
@@ -45,7 +47,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
 
       - name: Create invalidation in cloundfront for index.html
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_CONTAINER_ID }} --paths "/container/latest/index.html"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_ID }} --paths "/container/latest/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
