--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -33,7 +33,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
 
       - name: Create invalidation in cloundfront for index.html
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_MARKETING_ID }} --paths "/marketing/latest/index.html"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUITION_ID }} --paths "/marketing/latest/remoteEntry.html"
 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
