--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "chart.js": "3.7.1",
+    "dashboard": "file:",
     "primeflex": "3.1.3",
     "primeicons": "5.0.0",
     "primevue": "3.12.0",
